--- a/index.html
+++ b/index.html
@@ -4,7 +4,78 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Online Notepad</title>
-  <link rel="stylesheet" href="style.css" />
+  <style>
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      background: #f0f8ff;
+      margin: 0;
+      padding: 0;
+    }
+
+    .container {
+      max-width: 700px;
+      margin: 60px auto;
+      background: #ffffff;
+      padding: 30px;
+      border-radius: 16px;
+      box-shadow: 0 10px 25px rgba(0,0,0,0.1);
+      border: 3px solid #007bff;
+    }
+
+    h1 {
+      text-align: center;
+      margin-bottom: 20px;
+      color: #333;
+    }
+
+    textarea {
+      width: 100%;
+      height: 450px;
+      padding: 15px;
+      font-size: 16px;
+      border: 2px solid #ccc;
+      border-radius: 10px;
+      resize: vertical;
+      box-sizing: border-box;
+      outline: none;
+      transition: border 0.2s;
+    }
+
+    textarea:focus {
+      border: 2px solid #007bff;
+      background-color: #f9fcff;
+    }
+
+    .buttons {
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      gap: 10px;
+      margin-top: 20px;
+    }
+
+    button {
+      padding: 12px 24px;
+      font-size: 15px;
+      cursor: pointer;
+      border: none;
+      border-radius: 8px;
+      background-color: #007bff;
+      color: white;
+      transition: background-color 0.2s;
+    }
+
+    button:hover {
+      background-color: #0056b3;
+    }
+
+    .saved {
+      text-align: center;
+      font-size: 13px;
+      color: gray;
+      margin-top: 15px;
+    }
+  </style>
 </head>
 <body>
   <div class="container">
@@ -17,6 +88,41 @@
     </div>
     <p class="saved">Autosaved to your browser</p>
   </div>
-  <script src="script.js"></script>
+
+  <script>
+    const notepad = document.getElementById("notepad");
+
+    // Load saved note on page load
+    window.onload = () => {
+      const saved = localStorage.getItem("savedNote");
+      if (saved) notepad.value = saved;
+    };
+
+    // Auto-save on input
+    notepad.addEventListener("input", () => {
+      localStorage.setItem("savedNote", notepad.value);
+    });
+
+    function copyText() {
+      notepad.select();
+      document.execCommand("copy");
+      alert("Copied to clipboard!");
+    }
+
+    function clearText() {
+      if (confirm("Are you sure you want to clear the note?")) {
+        notepad.value = "";
+        localStorage.removeItem("savedNote");
+      }
+    }
+
+    function downloadText() {
+      const blob = new Blob([notepad.value], { type: "text/plain" });
+      const link = document.createElement("a");
+      link.href = URL.createObjectURL(blob);
+      link.download = "note.txt";
+      link.click();
+    }
+  </script>
 </body>
 </html>
