--- a/index.html
+++ b/index.html
@@ -4,78 +4,79 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Online Notepad</title>
-  <style>
-    body {
-      font-family: 'Segoe UI', sans-serif;
-      background: #f0f8ff;
-      margin: 0;
-      padding: 0;
-    }
+<style>
+  body {
+    font-family: 'Segoe UI', sans-serif;
+    background: #f0f8ff;
+    margin: 0;
+    padding: 0;
+  }
 
-    .container {
-      max-width: 700px;
-      margin: 60px auto;
-      background: #ffffff;
-      padding: 30px;
-      border-radius: 16px;
-      box-shadow: 0 10px 25px rgba(0,0,0,0.1);
-      border: 3px solid #007bff;
-    }
+  .container {
+    max-width: 90vw;         /* wider container */
+    margin: 60px auto;
+    background: #ffffff;
+    padding: 40px;           /* more padding */
+    border-radius: 20px;
+    box-shadow: 0 10px 25px rgba(0,0,0,0.1);
+    border: 3px solid #007bff;
+  }
 
-    h1 {
-      text-align: center;
-      margin-bottom: 20px;
-      color: #333;
-    }
+  h1 {
+    text-align: center;
+    margin-bottom: 30px;
+    color: #333;
+    font-size: 2rem;
+  }
 
-    textarea {
-      width: 100%;
-      height: 450px;
-      padding: 15px;
-      font-size: 16px;
-      border: 2px solid #ccc;
-      border-radius: 10px;
-      resize: vertical;
-      box-sizing: border-box;
-      outline: none;
-      transition: border 0.2s;
-    }
+  textarea {
+    width: 100%;
+    height: 600px;           /* taller textarea */
+    padding: 20px;
+    font-size: 18px;
+    border: 2px solid #ccc;
+    border-radius: 12px;
+    resize: vertical;
+    box-sizing: border-box;
+    outline: none;
+    transition: border 0.2s;
+  }
 
-    textarea:focus {
-      border: 2px solid #007bff;
-      background-color: #f9fcff;
-    }
+  textarea:focus {
+    border: 2px solid #007bff;
+    background-color: #f9fcff;
+  }
 
-    .buttons {
-      display: flex;
-      justify-content: center;
-      flex-wrap: wrap;
-      gap: 10px;
-      margin-top: 20px;
-    }
+  .buttons {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 15px;
+    margin-top: 25px;
+  }
 
-    button {
-      padding: 12px 24px;
-      font-size: 15px;
-      cursor: pointer;
-      border: none;
-      border-radius: 8px;
-      background-color: #007bff;
-      color: white;
-      transition: background-color 0.2s;
-    }
+  button {
+    padding: 14px 28px;
+    font-size: 16px;
+    cursor: pointer;
+    border: none;
+    border-radius: 10px;
+    background-color: #007bff;
+    color: white;
+    transition: background-color 0.2s;
+  }
 
-    button:hover {
-      background-color: #0056b3;
-    }
+  button:hover {
+    background-color: #0056b3;
+  }
 
-    .saved {
-      text-align: center;
-      font-size: 13px;
-      color: gray;
-      margin-top: 15px;
-    }
-  </style>
+  .saved {
+    text-align: center;
+    font-size: 14px;
+    color: gray;
+    margin-top: 20px;
+  }
+</style>
 </head>
 <body>
   <div class="container">
