--- a/index.html
+++ b/index.html
@@ -4,84 +4,107 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Online Notepad</title>
-<style>
-  body {
-    font-family: 'Segoe UI', sans-serif;
-    background: #f0f8ff;
-    margin: 0;
-    padding: 0;
-  }
+  <style>
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      background: #f0f8ff;
+      margin: 0;
+      padding: 0;
+    }
 
-  .container {
-    max-width: 90vw;         /* wider container */
-    margin: 60px auto;
-    background: #ffffff;
-    padding: 40px;           /* more padding */
-    border-radius: 20px;
-    box-shadow: 0 10px 25px rgba(0,0,0,0.1);
-    border: 3px solid #007bff;
-  }
+    .top-bar {
+      display: flex;
+      justify-content: space-between;
+      padding: 10px 30px;
+      background-color: #007bff;
+      color: white;
+      font-size: 14px;
+    }
 
-  h1 {
-    text-align: center;
-    margin-bottom: 30px;
-    color: #333;
-    font-size: 2rem;
-  }
+    .container {
+      max-width: 90vw;
+      margin: 30px auto;
+      background: #ffffff;
+      padding: 40px;
+      border-radius: 20px;
+      box-shadow: 0 10px 25px rgba(0,0,0,0.1);
+      border: 3px solid #007bff;
+    }
 
-  textarea {
-    width: 100%;
-    height: 600px;           /* taller textarea */
-    padding: 20px;
-    font-size: 18px;
-    border: 2px solid #ccc;
-    border-radius: 12px;
-    resize: vertical;
-    box-sizing: border-box;
-    outline: none;
-    transition: border 0.2s;
-  }
+    h1 {
+      text-align: center;
+      margin-bottom: 30px;
+      color: #333;
+      font-size: 2rem;
+    }
 
-  textarea:focus {
-    border: 2px solid #007bff;
-    background-color: #f9fcff;
-  }
+    textarea {
+      width: 100%;
+      height: 600px;
+      padding: 20px;
+      font-size: 18px;
+      border: 2px solid #ccc;
+      border-radius: 12px;
+      resize: vertical;
+      box-sizing: border-box;
+      outline: none;
+      transition: border 0.2s;
+    }
 
-  .buttons {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    gap: 15px;
-    margin-top: 25px;
-  }
+    textarea:focus {
+      border: 2px solid #007bff;
+      background-color: #f9fcff;
+    }
 
-  button {
-    padding: 14px 28px;
-    font-size: 16px;
-    cursor: pointer;
-    border: none;
-    border-radius: 10px;
-    background-color: #007bff;
-    color: white;
-    transition: background-color 0.2s;
-  }
+    #counter {
+      text-align: center;
+      margin-top: 15px;
+      font-size: 14px;
+      color: #555;
+    }
 
-  button:hover {
-    background-color: #0056b3;
-  }
+    .buttons {
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      gap: 15px;
+      margin-top: 25px;
+    }
 
-  .saved {
-    text-align: center;
-    font-size: 14px;
-    color: gray;
-    margin-top: 20px;
-  }
-</style>
+    button {
+      padding: 14px 28px;
+      font-size: 16px;
+      cursor: pointer;
+      border: none;
+      border-radius: 10px;
+      background-color: #007bff;
+      color: white;
+      transition: background-color 0.2s;
+    }
+
+    button:hover {
+      background-color: #0056b3;
+    }
+
+    .saved {
+      text-align: center;
+      font-size: 14px;
+      color: gray;
+      margin-top: 20px;
+    }
+  </style>
 </head>
 <body>
+
+  <div class="top-bar">
+    <div id="quote">Loading quote...</div>
+    <div id="datetime">--:--</div>
+  </div>
+
   <div class="container">
     <h1>Online Notepad</h1>
     <textarea id="notepad" placeholder="Start typing..."></textarea>
+    <p id="counter">Words: 0 | Characters: 0</p>
     <div class="buttons">
       <button onclick="copyText()">Copy</button>
       <button onclick="clearText()">Clear</button>
@@ -90,55 +113,79 @@
     <p class="saved">Autosaved to your browser</p>
   </div>
 
-  <p id="counter" style="text-align:center; margin-top: 15px; font-size: 14px; color: #555;">
-  Words: 0 | Characters: 0
-</p>
+  <script>
+    const notepad = document.getElementById("notepad");
+    const counter = document.getElementById("counter");
+    const datetime = document.getElementById("datetime");
+    const quote = document.getElementById("quote");
 
- <script>
-  const notepad = document.getElementById("notepad");
-  const counter = document.getElementById("counter");
+    const quotes = [
+      "Believe in yourself and all that you are.",
+      "Start where you are. Use what you have. Do what you can.",
+      "Push yourself, because no one else is going to do it for you.",
+      "You’re capable of amazing things.",
+      "Success doesn't come from what you do occasionally, it comes from what you do consistently.",
+      "Work hard in silence. Let your success make the noise.",
+      "Don’t watch the clock; do what it does. Keep going."
+    ];
 
-  // Load saved note on page load
-  window.onload = () => {
-    const saved = localStorage.getItem("savedNote");
-    if (saved) notepad.value = saved;
-    updateCounter();
-  };
-
-  // Auto-save + counter update
-  notepad.addEventListener("input", () => {
-    localStorage.setItem("savedNote", notepad.value);
-    updateCounter();
-  });
-
-  function copyText() {
-    notepad.select();
-    document.execCommand("copy");
-    alert("Copied to clipboard!");
-  }
-
-  function clearText() {
-    if (confirm("Are you sure you want to clear the note?")) {
-      notepad.value = "";
-      localStorage.removeItem("savedNote");
-      updateCounter();
+    function showQuote() {
+      const random = Math.floor(Math.random() * quotes.length);
+      quote.textContent = quotes[random];
     }
-  }
 
-  function downloadText() {
-    const blob = new Blob([notepad.value], { type: "text/plain" });
-    const link = document.createElement("a");
-    link.href = URL.createObjectURL(blob);
-    link.download = "note.txt";
-    link.click();
-  }
+    function showDateTime() {
+      const now = new Date();
+      const options = { weekday: 'short', year: 'numeric', month: 'short', day: 'numeric' };
+      const formatted = now.toLocaleDateString(undefined, options);
+      const time = now.toLocaleTimeString([], { hour: '2-digit', minute: '2-digit' });
+      datetime.textContent = `${formatted} — ${time}`;
+    }
 
-  function updateCounter() {
-    const text = notepad.value.trim();
-    const wordCount = text === "" ? 0 : text.split(/\s+/).length;
-    const charCount = text.length;
-    counter.textContent = `Words: ${wordCount} | Characters: ${charCount}`;
-  }
-</script>
+    function updateCounter() {
+      const text = notepad.value.trim();
+      const wordCount = text === "" ? 0 : text.split(/\s+/).length;
+      const charCount = text.length;
+      counter.textContent = `Words: ${wordCount} | Characters: ${charCount}`;
+    }
+
+    function copyText() {
+      notepad.select();
+      document.execCommand("copy");
+      alert("Copied to clipboard!");
+    }
+
+    function clearText() {
+      if (confirm("Are you sure you want to clear the note?")) {
+        notepad.value = "";
+        localStorage.removeItem("savedNote");
+        updateCounter();
+      }
+    }
+
+    function downloadText() {
+      const blob = new Blob([notepad.value], { type: "text/plain" });
+      const link = document.createElement("a");
+      link.href = URL.createObjectURL(blob);
+      link.download = "note.txt";
+      link.click();
+    }
+
+    // Initialize everything
+    window.onload = () => {
+      const saved = localStorage.getItem("savedNote");
+      if (saved) notepad.value = saved;
+      updateCounter();
+      showQuote();
+      showDateTime();
+    };
+
+    // Auto-save + count on input
+    notepad.addEventListener("input", () => {
+      localStorage.setItem("savedNote", notepad.value);
+      updateCounter();
+    });
+  </script>
+
 </body>
 </html>
